accelerated-domains: add aibanges.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9896,6 +9896,7 @@ server=/aibaimm.com/114.114.114.114
 server=/aibang.com/114.114.114.114
 server=/aibang.run/114.114.114.114
 server=/aibangbaoxian.net/114.114.114.114
+server=/aibanges.com/114.114.114.114
 server=/aibank.com/114.114.114.114
 server=/aibank.link/114.114.114.114
 server=/aibao.com/114.114.114.114
