accelerated-domains: add china-goffen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19674,6 +19674,7 @@ server=/china-gehang.com/114.114.114.114
 server=/china-genius.com/114.114.114.114
 server=/china-giant.com/114.114.114.114
 server=/china-gnd.com/114.114.114.114
+server=/china-goffen.com/114.114.114.114
 server=/china-gold.com/114.114.114.114
 server=/china-goldcard.com/114.114.114.114
 server=/china-greenfund.com/114.114.114.114
