--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61056,6 +61056,7 @@ server=/mingdao8.com/114.114.114.114
 server=/mingdaocloud.com/114.114.114.114
 server=/mingdeshiye.com/114.114.114.114
 server=/mingdongman.com/114.114.114.114
+server=/mingdutech.com/114.114.114.114
 server=/mingfengtang.com/114.114.114.114
 server=/mingfucdn.com/114.114.114.114
 server=/mingfucloud.com/114.114.114.114
