--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98960,6 +98960,7 @@ server=/yunshangkj.com/114.114.114.114
 server=/yunshangnc.com/114.114.114.114
 server=/yunshangsuzhou.com/114.114.114.114
 server=/yunshangxuzhou.com/114.114.114.114
+server=/yunshangzhejiang.com/114.114.114.114
 server=/yunshanit.com/114.114.114.114
 server=/yunshanmedical.com/114.114.114.114
 server=/yunshanmeicai.com/114.114.114.114
