accelerated-domains: add zjke.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102363,6 +102363,7 @@ server=/zjjzyxh.com/114.114.114.114
 server=/zjkangzh.com/114.114.114.114
 server=/zjkccb.com/114.114.114.114
 server=/zjkcysm.com/114.114.114.114
+server=/zjke.com/114.114.114.114
 server=/zjkelan.com/114.114.114.114
 server=/zjkgdcs.com/114.114.114.114
 server=/zjkgjj.com/114.114.114.114
