--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102394,6 +102394,7 @@ server=/zjmct.com/114.114.114.114
 server=/zjmi-mall.com/114.114.114.114
 server=/zjminghong.com/114.114.114.114
 server=/zjmingzhen.com/114.114.114.114
+server=/zjminong.com/114.114.114.114
 server=/zjmkzx.com/114.114.114.114
 server=/zjmobile.com/114.114.114.114
 server=/zjmoney.com/114.114.114.114
