--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102438,6 +102438,7 @@ server=/zjsanma.com/114.114.114.114
 server=/zjsbigdata.com/114.114.114.114
 server=/zjscdb.com/114.114.114.114
 server=/zjscs.com/114.114.114.114
+server=/zjsdbjt.com/114.114.114.114
 server=/zjsdjlkj.com/114.114.114.114
 server=/zjsfkj.com/114.114.114.114
 server=/zjsgjs.com/114.114.114.114
