--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102445,6 +102445,7 @@ server=/zjsgjs.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
 server=/zjshuo.com/114.114.114.114
 server=/zjsight.com/114.114.114.114
+server=/zjsjty.com/114.114.114.114
 server=/zjsjtz.com/114.114.114.114
 server=/zjskjt.com/114.114.114.114
 server=/zjsmhg.com/114.114.114.114
