accelerated-domains: add yikeou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96322,6 +96322,7 @@ server=/yikaochacha.com/114.114.114.114
 server=/yikaow.com/114.114.114.114
 server=/yikedou.com/114.114.114.114
 server=/yikedy.cc/114.114.114.114
+server=/yikeou.com/114.114.114.114
 server=/yiketalks.com/114.114.114.114
 server=/yiketianqi.com/114.114.114.114
 server=/yikeweiqi.com/114.114.114.114
