accelerated-domains: add huazhangautomation.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44085,6 +44085,7 @@ server=/huayulandmarkhotel.com/114.114.114.114
 server=/huayun.com/114.114.114.114
 server=/huayunyy.com/114.114.114.114
 server=/huayuzj.com/114.114.114.114
+server=/huazhangautomation.com/114.114.114.114
 server=/huazhen-gs.com/114.114.114.114
 server=/huazhen2008.com/114.114.114.114
 server=/huazhen2008.net/114.114.114.114
