accelerated-domains: add amp-intl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11035,6 +11035,7 @@ server=/amobbs.com/114.114.114.114
 server=/amoe.cc/114.114.114.114
 server=/amonxu.com/114.114.114.114
 server=/amoydxmed.com/114.114.114.114
+server=/amp-intl.com/114.114.114.114
 server=/ampcn.com/114.114.114.114
 server=/amperobots.com/114.114.114.114
 server=/amphenol-jet.com/114.114.114.114
