--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22450,6 +22450,7 @@ server=/cnsdjxw.com/114.114.114.114
 server=/cnseay.com/114.114.114.114
 server=/cnseeq.com/114.114.114.114
 server=/cnsesan.com/114.114.114.114
+server=/cnsetsail.com/114.114.114.114
 server=/cnsfk.com/114.114.114.114
 server=/cnshexinji.com/114.114.114.114
 server=/cnshiri.com/114.114.114.114
