--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49099,6 +49099,7 @@ server=/jiachangshichutieqi.com/114.114.114.114
 server=/jiachong.com/114.114.114.114
 server=/jiadafoods.com/114.114.114.114
 server=/jiadapaper.com/114.114.114.114
+server=/jiadeqy.com/114.114.114.114
 server=/jiadingjiaxiao.com/114.114.114.114
 server=/jiadingqiang.com/114.114.114.114
 server=/jiadounet.com/114.114.114.114
