accelerated-domains: add huanxinfluoro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43879,6 +43879,7 @@ server=/huanxi.com/114.114.114.114
 server=/huanxia.com/114.114.114.114
 server=/huanxiangji.com/114.114.114.114
 server=/huanximedia.com/114.114.114.114
+server=/huanxinfluoro.com/114.114.114.114
 server=/huanxingedu.com/114.114.114.114
 server=/huanxio.com/114.114.114.114
 server=/huanxiongdd.com/114.114.114.114
