--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84566,6 +84566,7 @@ server=/tzwpco.com/114.114.114.114
 server=/tzxingtang.com/114.114.114.114
 server=/tzxwzx.com/114.114.114.114
 server=/tzyiyuantuan.com/114.114.114.114
+server=/tzyongda.com/114.114.114.114
 server=/tzyun.com/114.114.114.114
 server=/tzyy-sh.com/114.114.114.114
 server=/tzyyao.com/114.114.114.114
