--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64612,6 +64612,7 @@ server=/nlogn.art/114.114.114.114
 server=/nlpjob.com/114.114.114.114
 server=/nlsc.group/114.114.114.114
 server=/nlscan.com/114.114.114.114
+server=/nlteck.com/114.114.114.114
 server=/nlttms.com/114.114.114.114
 server=/nlww168.com/114.114.114.114
 server=/nlxdsy.com/114.114.114.114
