--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100196,6 +100196,7 @@ server=/zfbzhsq.com/114.114.114.114
 server=/zfcm.net/114.114.114.114
 server=/zfdliot.com/114.114.114.114
 server=/zfdmkj.com/114.114.114.114
+server=/zfemc.com/114.114.114.114
 server=/zfengit.com/114.114.114.114
 server=/zffan.com/114.114.114.114
 server=/zffcb.com/114.114.114.114
