--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102221,6 +102221,7 @@ server=/zj-huawei.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
 server=/zj-nuolong.com/114.114.114.114
+server=/zj-yinlong.com/114.114.114.114
 server=/zj.com/114.114.114.114
 server=/zj01.com/114.114.114.114
 server=/zj1058.com/114.114.114.114
