accelerated-domains: add zjdjc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102276,6 +102276,7 @@ server=/zjcywx.com/114.114.114.114
 server=/zjdashi.com/114.114.114.114
 server=/zjdata.net/114.114.114.114
 server=/zjdianying.com/114.114.114.114
+server=/zjdjc.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
 server=/zjdydlc.com/114.114.114.114
