accelerated-domains: add zjhby.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102313,6 +102313,7 @@ server=/zjgzcpa.com/114.114.114.114
 server=/zjhaitian.com/114.114.114.114
 server=/zjhangyin.com/114.114.114.114
 server=/zjhbdlkj.com/114.114.114.114
+server=/zjhby.com/114.114.114.114
 server=/zjhcbank.com/114.114.114.114
 server=/zjhdcs.com/114.114.114.114
 server=/zjhejiang.com/114.114.114.114
