accelerated-domains: add zjwsbidding.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102508,6 +102508,7 @@ server=/zjwit.net/114.114.114.114
 server=/zjwk.com/114.114.114.114
 server=/zjwmw.com/114.114.114.114
 server=/zjwqw.com/114.114.114.114
+server=/zjwsbidding.com/114.114.114.114
 server=/zjwttools.com/114.114.114.114
 server=/zjwxbank.com/114.114.114.114
 server=/zjxc.com/114.114.114.114
