accelerated-domains: add fanhar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30776,6 +30776,7 @@ server=/fanhaib.com/114.114.114.114
 server=/fanhaic.com/114.114.114.114
 server=/fanhangame.ltd/114.114.114.114
 server=/fanhaoyue.com/114.114.114.114
+server=/fanhar.com/114.114.114.114
 server=/fanhonghua.net/114.114.114.114
 server=/fanhougame.com/114.114.114.114
 server=/fanhtech.com/114.114.114.114
