--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14339,6 +14339,7 @@ server=/beyondfund.com/114.114.114.114
 server=/beyondh.com/114.114.114.114
 server=/beyonditsm.com/114.114.114.114
 server=/beyonds.com/114.114.114.114
+server=/beyondsungroup.com/114.114.114.114
 server=/beyoner.net/114.114.114.114
 server=/beyotime.com/114.114.114.114
 server=/bezbzsyf.com/114.114.114.114
