accelerated-domains: add dongri.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27293,6 +27293,7 @@ server=/dongqiang.com/114.114.114.114
 server=/dongqiniqin.com/114.114.114.114
 server=/dongqiudi.com/114.114.114.114
 server=/dongqiudi.net/114.114.114.114
+server=/dongri.com/114.114.114.114
 server=/dongrunsport.com/114.114.114.114
 server=/dongrv.com/114.114.114.114
 server=/dongsentire.com/114.114.114.114
