accelerated-domains: add mtcn.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62222,6 +62222,7 @@ server=/mtandaoni.com/114.114.114.114
 server=/mtavip.com/114.114.114.114
 server=/mtblj.com/114.114.114.114
 server=/mtchome.com/114.114.114.114
+server=/mtcn.net/114.114.114.114
 server=/mtcnsoft.com/114.114.114.114
 server=/mtcsys.com/114.114.114.114
 server=/mtcx99.com/114.114.114.114
