--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66443,6 +66443,7 @@ server=/origloria.com/114.114.114.114
 server=/orihard.com/114.114.114.114
 server=/oriphant.com/114.114.114.114
 server=/oritive.com/114.114.114.114
+server=/orjlight.com/114.114.114.114
 server=/ork739.com/114.114.114.114
 server=/orleto.com/114.114.114.114
 server=/orm-compressor.com/114.114.114.114
