accelerated-domains: add chinahongying.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20071,6 +20071,7 @@ server=/chinahj.club/114.114.114.114
 server=/chinahkidc.net/114.114.114.114
 server=/chinahky.com/114.114.114.114
 server=/chinahnjs.com/114.114.114.114
+server=/chinahongying.com/114.114.114.114
 server=/chinahorologe.com/114.114.114.114
 server=/chinahorse.org/114.114.114.114
 server=/chinahosesupply.com/114.114.114.114
