--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100841,6 +100841,7 @@ server=/zheishui.com/114.114.114.114
 server=/zheiyu.com/114.114.114.114
 server=/zhejiangcheng.com/114.114.114.114
 server=/zhejianglab.com/114.114.114.114
+server=/zhejiangliming.com/114.114.114.114
 server=/zhejianglong.com/114.114.114.114
 server=/zhejiangmuseum.com/114.114.114.114
 server=/zhejiangqinghe.com/114.114.114.114
