accelerated-domains: add huachuangroup.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43648,6 +43648,7 @@ server=/huachengjx.com/114.114.114.114
 server=/huachenit.com/114.114.114.114
 server=/huachenyuanyang.com/114.114.114.114
 server=/huachuang.fun/114.114.114.114
+server=/huachuangroup.net/114.114.114.114
 server=/huacolor.com/114.114.114.114
 server=/huacooling.com/114.114.114.114
 server=/huada120.com/114.114.114.114
