--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25684,6 +25684,7 @@ server=/delunyk.com/114.114.114.114
 server=/deluxewatchbox.com/114.114.114.114
 server=/delv029.com/114.114.114.114
 server=/demage.com/114.114.114.114
+server=/demark-jgkj.com/114.114.114.114
 server=/demingzi.com/114.114.114.114
 server=/demix.cc/114.114.114.114
 server=/demixc.com/114.114.114.114
