--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19755,6 +19755,7 @@ server=/china-slate.com/114.114.114.114
 server=/china-sop.com/114.114.114.114
 server=/china-sorsa.org/114.114.114.114
 server=/china-sss.com/114.114.114.114
+server=/china-stainless.com/114.114.114.114
 server=/china-sz.com/114.114.114.114
 server=/china-thk.com/114.114.114.114
 server=/china-tin.com/114.114.114.114
