--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20239,6 +20239,7 @@ server=/chinaopc.org/114.114.114.114
 server=/chinaopen.com/114.114.114.114
 server=/chinaopticsvalley.com/114.114.114.114
 server=/chinaore.com/114.114.114.114
+server=/chinaorganicchem.com/114.114.114.114
 server=/chinaott.net/114.114.114.114
 server=/chinapantom.com/114.114.114.114
 server=/chinapaper.net/114.114.114.114
