--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64615,6 +64615,7 @@ server=/nlark.com/114.114.114.114
 server=/nlbgt.com/114.114.114.114
 server=/nlecloud.com/114.114.114.114
 server=/nlhszc.com/114.114.114.114
+server=/nliniz.com/114.114.114.114
 server=/nlinkline.com/114.114.114.114
 server=/nlktj.com/114.114.114.114
 server=/nlogn.art/114.114.114.114
