accelerated-domains: add xcgbb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91035,6 +91035,7 @@ server=/xcex.net/114.114.114.114
 server=/xcexe.com/114.114.114.114
 server=/xcfuer.com/114.114.114.114
 server=/xcfunds.com/114.114.114.114
+server=/xcgbb.com/114.114.114.114
 server=/xcggpt.net/114.114.114.114
 server=/xcgogo.club/114.114.114.114
 server=/xcgogo.site/114.114.114.114
