--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102466,6 +102466,7 @@ server=/zjscdb.com/114.114.114.114
 server=/zjscs.com/114.114.114.114
 server=/zjsdbjt.com/114.114.114.114
 server=/zjsdjlkj.com/114.114.114.114
+server=/zjseaport.com/114.114.114.114
 server=/zjsfkj.com/114.114.114.114
 server=/zjsgjs.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
