accelerated-domains: add zjxtxs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102536,6 +102536,7 @@ server=/zjxlyp.com/114.114.114.114
 server=/zjxpp.com/114.114.114.114
 server=/zjxqyy.com/114.114.114.114
 server=/zjxsbank.com/114.114.114.114
+server=/zjxtxs.com/114.114.114.114
 server=/zjxwjs.com/114.114.114.114
 server=/zjxwtoy.com/114.114.114.114
 server=/zjxxkx.com/114.114.114.114
