--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84461,6 +84461,7 @@ server=/tyjnkj.com/114.114.114.114
 server=/tyksl.com/114.114.114.114
 server=/tylls.com/114.114.114.114
 server=/tymcdn.com/114.114.114.114
+server=/tymotor.cc/114.114.114.114
 server=/tyn.cc/114.114.114.114
 server=/tynlwx.com/114.114.114.114
 server=/tynpjpf.com/114.114.114.114
