accelerated-domains: add cnphotec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22382,6 +22382,7 @@ server=/cnpghouse.com/114.114.114.114
 server=/cnpgjt.com/114.114.114.114
 server=/cnphar.net/114.114.114.114
 server=/cnpharm.com/114.114.114.114
+server=/cnphotec.com/114.114.114.114
 server=/cnphotos.net/114.114.114.114
 server=/cnpickups.com/114.114.114.114
 server=/cnpicl.com/114.114.114.114
