accelerated-domains: add hljtchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42229,6 +42229,7 @@ server=/hljsfjy.com/114.114.114.114
 server=/hljsjtzy.com/114.114.114.114
 server=/hljsph.com/114.114.114.114
 server=/hljszjxhw.com/114.114.114.114
+server=/hljtchina.com/114.114.114.114
 server=/hljtcm.com/114.114.114.114
 server=/hljtv.com/114.114.114.114
 server=/hljucm.net/114.114.114.114
