--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42924,6 +42924,7 @@ server=/hongyimro.com/114.114.114.114
 server=/hongyirong.com/114.114.114.114
 server=/hongyitang.com/114.114.114.114
 server=/hongyu-qi.com/114.114.114.114
+server=/hongyuanpharm.com/114.114.114.114
 server=/hongyuanqh.com/114.114.114.114
 server=/hongyue.com/114.114.114.114
 server=/hongyuejiu.com/114.114.114.114
