accelerated-domains: add huahaipharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43692,6 +43692,7 @@ server=/huagujs.com/114.114.114.114
 server=/huaguoshan.com/114.114.114.114
 server=/huagupai.com/114.114.114.114
 server=/huahaijiaju.com/114.114.114.114
+server=/huahaipharm.com/114.114.114.114
 server=/huahanart.com/114.114.114.114
 server=/huahanbook.com/114.114.114.114
 server=/huahao.com/114.114.114.114
