accelerated-domains: add jingjiayl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49888,6 +49888,7 @@ server=/jingjiamicro.com/114.114.114.114
 server=/jingjiang.com/114.114.114.114
 server=/jingjiasc.com/114.114.114.114
 server=/jingjiawang.com/114.114.114.114
+server=/jingjiayl.com/114.114.114.114
 server=/jingjidaokan.com/114.114.114.114
 server=/jingjie360.com/114.114.114.114
 server=/jingjiezhileng.com/114.114.114.114
