--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57610,6 +57610,7 @@ server=/logozhizuowang.com/114.114.114.114
 server=/logwing.com/114.114.114.114
 server=/lohaa.com/114.114.114.114
 server=/lohalink.com/114.114.114.114
+server=/lohand.com/114.114.114.114
 server=/lohas-art.com/114.114.114.114
 server=/lohasor.com/114.114.114.114
 server=/lohjs.com/114.114.114.114
