accelerated-domains: add memsflex.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60405,6 +60405,7 @@ server=/mems.me/114.114.114.114
 server=/memsconsulting.com/114.114.114.114
 server=/memseminar.com/114.114.114.114
 server=/memsensing.com/114.114.114.114
+server=/memsflex.com/114.114.114.114
 server=/memsic.com/114.114.114.114
 server=/memuu.com/114.114.114.114
 server=/memyy.com/114.114.114.114
