--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80930,6 +80930,7 @@ server=/taikeji.com/114.114.114.114
 server=/taikewei.com/114.114.114.114
 server=/taikongmedia.com/114.114.114.114
 server=/taikr.com/114.114.114.114
+server=/tailingood.com/114.114.114.114
 server=/tailixiangjiao.com/114.114.114.114
 server=/tailixlq.com/114.114.114.114
 server=/taillkang.com/114.114.114.114
