accelerated-domains: add zjbeacon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102270,6 +102270,7 @@ server=/zjautoparts.com/114.114.114.114
 server=/zjbaixiang.com/114.114.114.114
 server=/zjbanger.com/114.114.114.114
 server=/zjbdt.com/114.114.114.114
+server=/zjbeacon.com/114.114.114.114
 server=/zjbelong.com/114.114.114.114
 server=/zjbinya.com/114.114.114.114
 server=/zjbolunfilter.com/114.114.114.114
