accelerated-domains: add zjnature.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102440,6 +102440,7 @@ server=/zjmrhpt.com/114.114.114.114
 server=/zjmuex.com/114.114.114.114
 server=/zjmycn.com/114.114.114.114
 server=/zjnad.com/114.114.114.114
+server=/zjnature.com/114.114.114.114
 server=/zjnav.com/114.114.114.114
 server=/zjnbxzc.com/114.114.114.114
 server=/zjnrcb.com/114.114.114.114
