--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102482,6 +102482,7 @@ server=/zjsdjlkj.com/114.114.114.114
 server=/zjseaport.com/114.114.114.114
 server=/zjsfkj.com/114.114.114.114
 server=/zjsgjs.com/114.114.114.114
+server=/zjshjkj.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
 server=/zjshuo.com/114.114.114.114
 server=/zjsight.com/114.114.114.114
