accelerated-domains: add weihua-newmaterial.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87836,6 +87836,7 @@ server=/weihaisheng.com/114.114.114.114
 server=/weihaobang.com/114.114.114.114
 server=/weihaoyi.com/114.114.114.114
 server=/weiheshidai.com/114.114.114.114
+server=/weihua-newmaterial.com/114.114.114.114
 server=/weihua2.com/114.114.114.114
 server=/weihualing.com/114.114.114.114
 server=/weihubao.com/114.114.114.114
