accelerated-domains: add kangufen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52848,6 +52848,7 @@ server=/kangshuai.biz/114.114.114.114
 server=/kangsibeauty.com/114.114.114.114
 server=/kangtaiwang.com/114.114.114.114
 server=/kangtor.com/114.114.114.114
+server=/kangufen.com/114.114.114.114
 server=/kanguo.com/114.114.114.114
 server=/kanguowai.com/114.114.114.114
 server=/kangwogx.com/114.114.114.114
