accelerated-domains: add xinmaizj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92681,6 +92681,7 @@ server=/xinliwanju.com/114.114.114.114
 server=/xinlong-holding.com/114.114.114.114
 server=/xinluex.com/114.114.114.114
 server=/xinlvtu.com/114.114.114.114
+server=/xinmaizj.com/114.114.114.114
 server=/xinmanduo.com/114.114.114.114
 server=/xinmanhua.net/114.114.114.114
 server=/xinmaotao.net/114.114.114.114
