accelerated-domains: add zhcic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100839,6 +100839,7 @@ server=/zhbit.com/114.114.114.114
 server=/zhblawyer.com/114.114.114.114
 server=/zhboyang.com/114.114.114.114
 server=/zhbus.org/114.114.114.114
+server=/zhcic.com/114.114.114.114
 server=/zhcidian.com/114.114.114.114
 server=/zhckw.com/114.114.114.114
 server=/zhcommerce.com/114.114.114.114
