accelerated-domains: add zt-motor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103231,6 +103231,7 @@ server=/zszxsz.com/114.114.114.114
 server=/zt-express.com/114.114.114.114
 server=/zt-info.com/114.114.114.114
 server=/zt-job.com/114.114.114.114
+server=/zt-motor.com/114.114.114.114
 server=/zt0729.xyz/114.114.114.114
 server=/zt1388.com/114.114.114.114
 server=/zt1f.com/114.114.114.114
