accelerated-domains: add cndingli.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22038,6 +22038,7 @@ server=/cndhotels.com/114.114.114.114
 server=/cndi-bj.com/114.114.114.114
 server=/cndi.com/114.114.114.114
 server=/cndids.com/114.114.114.114
+server=/cndingli.com/114.114.114.114
 server=/cndingxi.com/114.114.114.114
 server=/cndl.vip/114.114.114.114
 server=/cndledu.com/114.114.114.114
