accelerated-domains: add hisunplas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41965,6 +41965,7 @@ server=/hisofts.com/114.114.114.114
 server=/hisonracking.com/114.114.114.114
 server=/historychina.net/114.114.114.114
 server=/hisugar.com/114.114.114.114
+server=/hisunplas.com/114.114.114.114
 server=/hisupplier.com/114.114.114.114
 server=/hit180.com/114.114.114.114
 server=/hitachi-helc.com/114.114.114.114
