--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27997,6 +27997,7 @@ server=/dun-mfy-cdn.com/114.114.114.114
 server=/dun.la/114.114.114.114
 server=/dun.tax/114.114.114.114
 server=/dun555.com/114.114.114.114
+server=/dunan.net/114.114.114.114
 server=/dunankeji.com/114.114.114.114
 server=/dunbaigo.com/114.114.114.114
 server=/dungeon-server.com/114.114.114.114
