accelerated-domains: add rong-sheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72549,6 +72549,7 @@ server=/rondygroup.com/114.114.114.114
 server=/rong-data.com/114.114.114.114
 server=/rong-edge.com/114.114.114.114
 server=/rong-rtc.com/114.114.114.114
+server=/rong-sheng.com/114.114.114.114
 server=/rong100.com/114.114.114.114
 server=/rong360.com/114.114.114.114
 server=/ronganjx.com/114.114.114.114
