accelerated-domains: add tengen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81761,6 +81761,7 @@ server=/tengchangjiancai.com/114.114.114.114
 server=/tengchu.com/114.114.114.114
 server=/tengdatumu.com/114.114.114.114
 server=/tengdazuche.com/114.114.114.114
+server=/tengen.com/114.114.114.114
 server=/tengfang.net/114.114.114.114
 server=/tengfangyun.com/114.114.114.114
 server=/tengfeidn.com/114.114.114.114
