--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102313,6 +102313,7 @@ server=/zjdashi.com/114.114.114.114
 server=/zjdata.net/114.114.114.114
 server=/zjdianying.com/114.114.114.114
 server=/zjdjc.com/114.114.114.114
+server=/zjdkjs.com/114.114.114.114
 server=/zjdnajy.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
 server=/zjdydlc.com/114.114.114.114
