accelerated-domains: add zjwentou.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102545,6 +102545,7 @@ server=/zjwater.com/114.114.114.114
 server=/zjwc168.com/114.114.114.114
 server=/zjwcqp.com/114.114.114.114
 server=/zjwebapp.com/114.114.114.114
+server=/zjwentou.com/114.114.114.114
 server=/zjwhhly.com/114.114.114.114
 server=/zjwiki.com/114.114.114.114
 server=/zjwit.net/114.114.114.114
