--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23342,6 +23342,7 @@ server=/cqminghua.com/114.114.114.114
 server=/cqmmgo.com/114.114.114.114
 server=/cqmsdq.com/114.114.114.114
 server=/cqmw.com/114.114.114.114
+server=/cqmzj.com/114.114.114.114
 server=/cqnc.cc/114.114.114.114
 server=/cqncnews.com/114.114.114.114
 server=/cqndl.com/114.114.114.114
