--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10864,6 +10864,7 @@ server=/aliyunx.com/114.114.114.114
 server=/aliyunyh.com/114.114.114.114
 server=/alizhaopin.com/114.114.114.114
 server=/alizila.com/114.114.114.114
+server=/alkpharm.com/114.114.114.114
 server=/alkuyi.com/114.114.114.114
 server=/all-in-data.com/114.114.114.114
 server=/all3c.com/114.114.114.114
