accelerated-domains: add cct-lab.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18088,6 +18088,7 @@ server=/ccsuu.com/114.114.114.114
 server=/ccsx.net/114.114.114.114
 server=/ccsxlyy.com/114.114.114.114
 server=/cct-g.com/114.114.114.114
+server=/cct-lab.com/114.114.114.114
 server=/cct-solar.com/114.114.114.114
 server=/cct365.net/114.114.114.114
 server=/cctalk.com/114.114.114.114
