--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32486,6 +32486,7 @@ server=/frostwell.net/114.114.114.114
 server=/frostwing98.com/114.114.114.114
 server=/frp-china.net/114.114.114.114
 server=/frpapp.com/114.114.114.114
+server=/frt.ltd/114.114.114.114
 server=/frtgraphite.com/114.114.114.114
 server=/fruitday.com/114.114.114.114
 server=/frysb.com/114.114.114.114
