--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57831,6 +57831,7 @@ server=/lopwon.com/114.114.114.114
 server=/lorefree.com/114.114.114.114
 server=/lorienk.com/114.114.114.114
 server=/loring.xyz/114.114.114.114
+server=/lorzeal-zj.com/114.114.114.114
 server=/losergogogo.com/114.114.114.114
 server=/lossyou.com/114.114.114.114
 server=/lostali.com/114.114.114.114
