--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79496,6 +79496,7 @@ server=/suoyiren.com/114.114.114.114
 server=/supcname.com/114.114.114.114
 server=/supcompute.com/114.114.114.114
 server=/supcon.com/114.114.114.114
+server=/supconauto.com/114.114.114.114
 server=/supdri.com/114.114.114.114
 server=/supeeder.com/114.114.114.114
 server=/supei.com/114.114.114.114
