accelerated-domains: add zhujipower.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101840,6 +101840,7 @@ server=/zhujicankao.com/114.114.114.114
 server=/zhujiceping.com/114.114.114.114
 server=/zhujiji.com/114.114.114.114
 server=/zhujipindao.com/114.114.114.114
+server=/zhujipower.com/114.114.114.114
 server=/zhujisou.com/114.114.114.114
 server=/zhujitao.com/114.114.114.114
 server=/zhujiwanjia.com/114.114.114.114
