accelerated-domains: add gearsnet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33936,6 +33936,7 @@ server=/gear5.me/114.114.114.114
 server=/gearfront.net/114.114.114.114
 server=/gearkr.com/114.114.114.114
 server=/gearpharma.com/114.114.114.114
+server=/gearsnet.com/114.114.114.114
 server=/geatmap.com/114.114.114.114
 server=/geautos.com/114.114.114.114
 server=/gebaiwan.com/114.114.114.114
