accelerated-domains: add avptec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12416,6 +12416,7 @@ server=/avnpc.com/114.114.114.114
 server=/avnzpwo.com/114.114.114.114
 server=/avoscloud.com/114.114.114.114
 server=/avpic.xyz/114.114.114.114
+server=/avptec.com/114.114.114.114
 server=/avq360.com/114.114.114.114
 server=/avrvi.com/114.114.114.114
 server=/avstar4.com/114.114.114.114
