--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22281,6 +22281,7 @@ server=/cnkosun.com/114.114.114.114
 server=/cnkpgs.com/114.114.114.114
 server=/cnkuai.com/114.114.114.114
 server=/cnky.net/114.114.114.114
+server=/cnlampholder.com/114.114.114.114
 server=/cnlandfill.net/114.114.114.114
 server=/cnlang.org/114.114.114.114
 server=/cnlanling.com/114.114.114.114
