--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25181,6 +25181,7 @@ server=/davidlovezoe.club/114.114.114.114
 server=/davincimotor.com/114.114.114.114
 server=/dawaner.net/114.114.114.114
 server=/dawangling.com/114.114.114.114
+server=/daweiai.com/114.114.114.114
 server=/daweisoft.com/114.114.114.114
 server=/daweiyishu.com/114.114.114.114
 server=/dawenbo.com/114.114.114.114
