accelerated-domains: add nuodepharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65524,6 +65524,7 @@ server=/nuocdn.com/114.114.114.114
 server=/nuocx.com/114.114.114.114
 server=/nuodaguandao.com/114.114.114.114
 server=/nuodefund.com/114.114.114.114
+server=/nuodepharm.com/114.114.114.114
 server=/nuoder.com/114.114.114.114
 server=/nuofanpay.com/114.114.114.114
 server=/nuoguangsh.com/114.114.114.114
