--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102269,6 +102269,7 @@ server=/zj-guojun.com/114.114.114.114
 server=/zj-huawei.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
+server=/zj-jingyang.com/114.114.114.114
 server=/zj-nuolong.com/114.114.114.114
 server=/zj-tuna.com/114.114.114.114
 server=/zj-yinlong.com/114.114.114.114
