accelerated-domains: add zjchuanning.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102311,6 +102311,7 @@ server=/zjcbank.com/114.114.114.114
 server=/zjcbjy.com/114.114.114.114
 server=/zjcdn.com/114.114.114.114
 server=/zjchina.org/114.114.114.114
+server=/zjchuanning.com/114.114.114.114
 server=/zjchuguo.com/114.114.114.114
 server=/zjcic.net/114.114.114.114
 server=/zjcio.org/114.114.114.114
