--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102866,6 +102866,7 @@ server=/znimg.com/114.114.114.114
 server=/znj.com/114.114.114.114
 server=/znjchina.com/114.114.114.114
 server=/znjj.tv/114.114.114.114
+server=/znjs.com/114.114.114.114
 server=/znjttz.com/114.114.114.114
 server=/znlc2015.com/114.114.114.114
 server=/znlcn.org/114.114.114.114
