--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102613,6 +102613,7 @@ server=/zjzoneng.com/114.114.114.114
 server=/zjzs.net/114.114.114.114
 server=/zjzsa.com/114.114.114.114
 server=/zjzsxb.com/114.114.114.114
+server=/zjzwlab.com/114.114.114.114
 server=/zjzydns.com/114.114.114.114
 server=/zjzyxs.com/114.114.114.114
 server=/zk0771.com/114.114.114.114
