accelerated-domains: add hengdaxincai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41274,6 +41274,7 @@ server=/hengchangda.com/114.114.114.114
 server=/hengdafuji.com/114.114.114.114
 server=/hengdawatch.com/114.114.114.114
 server=/hengdawenbo.com/114.114.114.114
+server=/hengdaxincai.com/114.114.114.114
 server=/hengdayun.com/114.114.114.114
 server=/hengdian.com/114.114.114.114
 server=/hengdianfilm.com/114.114.114.114
