--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75066,6 +75066,7 @@ server=/shangfang56.com/114.114.114.114
 server=/shangfenbao.com/114.114.114.114
 server=/shangfox.com/114.114.114.114
 server=/shanggame.com/114.114.114.114
+server=/shanggong-zj.com/114.114.114.114
 server=/shanghai-air.com/114.114.114.114
 server=/shanghai-at.com/114.114.114.114
 server=/shanghai-channel.com/114.114.114.114
