--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19699,6 +19699,7 @@ server=/china-indium.com/114.114.114.114
 server=/china-invests.net/114.114.114.114
 server=/china-isotope.com/114.114.114.114
 server=/china-j.com/114.114.114.114
+server=/china-jinlong.com/114.114.114.114
 server=/china-jit.com/114.114.114.114
 server=/china-jm.org/114.114.114.114
 server=/china-jxcf.com/114.114.114.114
