accelerated-domains: add chinaztg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20514,6 +20514,7 @@ server=/chinaznj.com/114.114.114.114
 server=/chinaznyj.com/114.114.114.114
 server=/chinazov.com/114.114.114.114
 server=/chinazsgroup.com/114.114.114.114
+server=/chinaztg.com/114.114.114.114
 server=/chinazwds.com/114.114.114.114
 server=/chinazxjc.com/114.114.114.114
 server=/chinazxt.com/114.114.114.114
