accelerated-domains: add cnweiming.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22558,6 +22558,7 @@ server=/cnwebe.com/114.114.114.114
 server=/cnweblog.com/114.114.114.114
 server=/cnwebshow.com/114.114.114.114
 server=/cnweiju.com/114.114.114.114
+server=/cnweiming.com/114.114.114.114
 server=/cnweisou.com/114.114.114.114
 server=/cnwenshi.net/114.114.114.114
 server=/cnwest.com/114.114.114.114
