accelerated-domains: add gbgcn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33591,6 +33591,7 @@ server=/gbdz.net/114.114.114.114
 server=/gbfedashb4.fun/114.114.114.114
 server=/gbffchina.com/114.114.114.114
 server=/gbgba.com/114.114.114.114
+server=/gbgcn.com/114.114.114.114
 server=/gbgedashb8.fun/114.114.114.114
 server=/gbhome.com/114.114.114.114
 server=/gbi324.com/114.114.114.114
