--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41520,6 +41520,7 @@ server=/hfdaoyuan.com/114.114.114.114
 server=/hfdedu.com/114.114.114.114
 server=/hfdsgs.com/114.114.114.114
 server=/hffhgc.com/114.114.114.114
+server=/hffoil.com/114.114.114.114
 server=/hffund.com/114.114.114.114
 server=/hfgip.com/114.114.114.114
 server=/hfgjj.com/114.114.114.114
