--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96691,6 +96691,7 @@ server=/yipinread.com/114.114.114.114
 server=/yipinsmart.com/114.114.114.114
 server=/yipintemian.com/114.114.114.114
 server=/yipinyiwu.com/114.114.114.114
+server=/yipsink.com/114.114.114.114
 server=/yipujiance.com/114.114.114.114
 server=/yipuping.com/114.114.114.114
 server=/yiputouzi.com/114.114.114.114
