accelerated-domains: add zhihua-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101156,6 +101156,7 @@ server=/zhihevip.com/114.114.114.114
 server=/zhihjf.com/114.114.114.114
 server=/zhihu.com/114.114.114.114
 server=/zhihu.dev/114.114.114.114
+server=/zhihua-tech.com/114.114.114.114
 server=/zhihudsp.com/114.114.114.114
 server=/zhihuichuangyanshi.com/114.114.114.114
 server=/zhihuiep.com/114.114.114.114
