accelerated-domains: add zjnrg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102485,6 +102485,7 @@ server=/zjnature.com/114.114.114.114
 server=/zjnav.com/114.114.114.114
 server=/zjnbxzc.com/114.114.114.114
 server=/zjnrcb.com/114.114.114.114
+server=/zjnrg.com/114.114.114.114
 server=/zjolcdn.com/114.114.114.114
 server=/zjoldns.com/114.114.114.114
 server=/zjorient.com/114.114.114.114
