accelerated-domains: add zuadr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103368,6 +103368,7 @@ server=/ztzupu.com/114.114.114.114
 server=/ztzy.com/114.114.114.114
 server=/ztzzls.com/114.114.114.114
 server=/zu3.com/114.114.114.114
+server=/zuadr.com/114.114.114.114
 server=/zuan-cheng.com/114.114.114.114
 server=/zuanao.com/114.114.114.114
 server=/zuanchuang.org/114.114.114.114
