accelerated-domains: add asen-pharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12022,6 +12022,7 @@ server=/aseann.com/114.114.114.114
 server=/aseanparts.com/114.114.114.114
 server=/asemi360.com/114.114.114.114
 server=/asemi99.net/114.114.114.114
+server=/asen-pharm.com/114.114.114.114
 server=/aseoc.com/114.114.114.114
 server=/aseoe.com/114.114.114.114
 server=/asev.xyz/114.114.114.114
