--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30327,6 +30327,7 @@ server=/excelcn.com/114.114.114.114
 server=/excelhome.net/114.114.114.114
 server=/excellbio.com/114.114.114.114
 server=/excellenceads.com/114.114.114.114
+server=/excelpharma.com/114.114.114.114
 server=/excelpx.com/114.114.114.114
 server=/exchen.net/114.114.114.114
 server=/excm.net/114.114.114.114
