accelerated-domains: add ihenda.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46520,6 +46520,7 @@ server=/iheima.net/114.114.114.114
 server=/ihello.cc/114.114.114.114
 server=/ihelpy.net/114.114.114.114
 server=/ihemuu.com/114.114.114.114
+server=/ihenda.com/114.114.114.114
 server=/ihengheng.com/114.114.114.114
 server=/ihepa.com/114.114.114.114
 server=/ihggccampaign.com/114.114.114.114
