--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79441,6 +79441,7 @@ server=/sunocean.life/114.114.114.114
 server=/sunofbeaches.com/114.114.114.114
 server=/sunon-power.com/114.114.114.114
 server=/sunonln.com/114.114.114.114
+server=/sunorensolar.com/114.114.114.114
 server=/sunowo.com/114.114.114.114
 server=/sunpala.com/114.114.114.114
 server=/sunpapergroup.com/114.114.114.114
