--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80238,6 +80238,7 @@ server=/sz1978.com/114.114.114.114
 server=/sz2048.com/114.114.114.114
 server=/sz240.com/114.114.114.114
 server=/sz315.org/114.114.114.114
+server=/sz3dp.com/114.114.114.114
 server=/sz5156.com/114.114.114.114
 server=/sz5983.com/114.114.114.114
 server=/sz7h.com/114.114.114.114
