--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102529,6 +102529,7 @@ server=/zjsdjlkj.com/114.114.114.114
 server=/zjseaport.com/114.114.114.114
 server=/zjsfkj.com/114.114.114.114
 server=/zjsgjs.com/114.114.114.114
+server=/zjshcl.com/114.114.114.114
 server=/zjshjkj.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
 server=/zjshuo.com/114.114.114.114
