--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102617,6 +102617,7 @@ server=/zjyyang.com/114.114.114.114
 server=/zjyygy.com/114.114.114.114
 server=/zjza.com/114.114.114.114
 server=/zjzcec.com/114.114.114.114
+server=/zjzcen.com/114.114.114.114
 server=/zjzdgj.com/114.114.114.114
 server=/zjzg.com/114.114.114.114
 server=/zjzhengding.com/114.114.114.114
