--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102520,6 +102520,7 @@ server=/zjrtv.vip/114.114.114.114
 server=/zjrugao.com/114.114.114.114
 server=/zjsairport.com/114.114.114.114
 server=/zjsaisi.com/114.114.114.114
+server=/zjsanji.com/114.114.114.114
 server=/zjsanma.com/114.114.114.114
 server=/zjsbigdata.com/114.114.114.114
 server=/zjscdb.com/114.114.114.114
