--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29469,6 +29469,7 @@ server=/ekclubinternational.com/114.114.114.114
 server=/ekecdn.com/114.114.114.114
 server=/ekewy.com/114.114.114.114
 server=/eking-tech.com/114.114.114.114
+server=/ekingair.com/114.114.114.114
 server=/ekingtopwood.com/114.114.114.114
 server=/ekltes.xyz/114.114.114.114
 server=/eks0451.com/114.114.114.114
