--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34130,6 +34130,7 @@ server=/geo.kaspersky.com/114.114.114.114
 server=/geo2k.com/114.114.114.114
 server=/geoai.com/114.114.114.114
 server=/geocounter.net/114.114.114.114
+server=/geoforcechip.com/114.114.114.114
 server=/geogsci.com/114.114.114.114
 server=/geoharbour.com/114.114.114.114
 server=/geohey.com/114.114.114.114
