--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72329,6 +72329,7 @@ server=/ricterz.me/114.114.114.114
 server=/rictos.com/114.114.114.114
 server=/ridgepole.com/114.114.114.114
 server=/riecent.com/114.114.114.114
+server=/rifapm.com/114.114.114.114
 server=/rifubao.com/114.114.114.114
 server=/rigen-bio.com/114.114.114.114
 server=/rigerna.com/114.114.114.114
