accelerated-domains: add shoufu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76233,6 +76233,7 @@ server=/shouduit.com/114.114.114.114
 server=/shoudurc.com/114.114.114.114
 server=/shoufaw.com/114.114.114.114
 server=/shoufm.com/114.114.114.114
+server=/shoufu.com/114.114.114.114
 server=/shougongke.com/114.114.114.114
 server=/shougongke.net/114.114.114.114
 server=/shougoumingbiao.com/114.114.114.114
