--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102456,6 +102456,7 @@ server=/zjke.com/114.114.114.114
 server=/zjkelan.com/114.114.114.114
 server=/zjkgdcs.com/114.114.114.114
 server=/zjkgjj.com/114.114.114.114
+server=/zjkim.com/114.114.114.114
 server=/zjkings.com/114.114.114.114
 server=/zjkmtgc.com/114.114.114.114
 server=/zjknews.com/114.114.114.114
