accelerated-domains: add zjjxjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102445,6 +102445,7 @@ server=/zjjrtv.com/114.114.114.114
 server=/zjjsbank.com/114.114.114.114
 server=/zjjsit.com/114.114.114.114
 server=/zjjubao.com/114.114.114.114
+server=/zjjxjt.com/114.114.114.114
 server=/zjjy.com/114.114.114.114
 server=/zjjytyt.com/114.114.114.114
 server=/zjjzxgj.com/114.114.114.114
