--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102453,6 +102453,7 @@ server=/zjjzyxh.com/114.114.114.114
 server=/zjkangzh.com/114.114.114.114
 server=/zjkccb.com/114.114.114.114
 server=/zjkcysm.com/114.114.114.114
+server=/zjkdl.com/114.114.114.114
 server=/zjke.com/114.114.114.114
 server=/zjkelan.com/114.114.114.114
 server=/zjkgdcs.com/114.114.114.114
