--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9937,6 +9937,7 @@ server=/aichat.net/114.114.114.114
 server=/aichat1234.com/114.114.114.114
 server=/aichehome.com/114.114.114.114
 server=/aichi-jimu.com/114.114.114.114
+server=/aichi-zhe.com/114.114.114.114
 server=/aichinaw.com/114.114.114.114
 server=/aichunjing.com/114.114.114.114
 server=/aiclicash.com/114.114.114.114
