--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19798,6 +19798,7 @@ server=/china-zbycg.com/114.114.114.114
 server=/china-zhongda.net/114.114.114.114
 server=/china-zikao.com/114.114.114.114
 server=/china-zyd.com/114.114.114.114
+server=/china-zysj.com/114.114.114.114
 server=/china.com/114.114.114.114
 server=/china.mintel.com/114.114.114.114
 server=/china001.com/114.114.114.114
