accelerated-domains: add jiarenrecycle.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49481,6 +49481,7 @@ server=/jiaqianlee.com/114.114.114.114
 server=/jiaqilixiang.xyz/114.114.114.114
 server=/jiaren.org/114.114.114.114
 server=/jiarendress.com/114.114.114.114
+server=/jiarenrecycle.com/114.114.114.114
 server=/jiarenvip.com/114.114.114.114
 server=/jiarenzs.com/114.114.114.114
 server=/jiaronghuahome.com/114.114.114.114
