accelerated-domains: add phzg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67694,6 +67694,7 @@ server=/physike.com/114.114.114.114
 server=/physoe.com/114.114.114.114
 server=/phyuan.com/114.114.114.114
 server=/phyy.com/114.114.114.114
+server=/phzg.com/114.114.114.114
 server=/pi7.com/114.114.114.114
 server=/piaget-hello.com/114.114.114.114
 server=/pianbingji.com/114.114.114.114
