--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83302,6 +83302,7 @@ server=/topsresearch.com/114.114.114.114
 server=/topsrx.com/114.114.114.114
 server=/topstar.art/114.114.114.114
 server=/topsunholdings.com/114.114.114.114
+server=/topsunpower.cc/114.114.114.114
 server=/topswim.net/114.114.114.114
 server=/toptastewin.com/114.114.114.114
 server=/topthink.com/114.114.114.114
