accelerated-domains: add zjtobacco.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102576,6 +102576,7 @@ server=/zjthealth.com/114.114.114.114
 server=/zjtkdz.com/114.114.114.114
 server=/zjtlcb.com/114.114.114.114
 server=/zjtntd.com/114.114.114.114
+server=/zjtobacco.com/114.114.114.114
 server=/zjtongde.com/114.114.114.114
 server=/zjtree.com/114.114.114.114
 server=/zjtxedu.org/114.114.114.114
