accelerated-domains: add zjzy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102647,6 +102647,7 @@ server=/zjzs.net/114.114.114.114
 server=/zjzsa.com/114.114.114.114
 server=/zjzsxb.com/114.114.114.114
 server=/zjzwlab.com/114.114.114.114
+server=/zjzy.com/114.114.114.114
 server=/zjzydns.com/114.114.114.114
 server=/zjzyxs.com/114.114.114.114
 server=/zk0771.com/114.114.114.114
