accelerated-domains: add zpcdi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103059,6 +103059,7 @@ server=/zpascal.net/114.114.114.114
 server=/zpaudit.com/114.114.114.114
 server=/zpb365.com/114.114.114.114
 server=/zpc-cn.com/114.114.114.114
+server=/zpcdi.com/114.114.114.114
 server=/zpchaji.com/114.114.114.114
 server=/zpcmshopping.com/114.114.114.114
 server=/zpedu.com/114.114.114.114
