accelerated-domains: add zypharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103845,6 +103845,7 @@ server=/zyouexpress.com/114.114.114.114
 server=/zyoulun.com/114.114.114.114
 server=/zyoung.me/114.114.114.114
 server=/zypf.xyz/114.114.114.114
+server=/zypharm.com/114.114.114.114
 server=/zyplayer.com/114.114.114.114
 server=/zyq.today/114.114.114.114
 server=/zyq366.com/114.114.114.114
