--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25571,6 +25571,7 @@ server=/debug.moe/114.114.114.114
 server=/debugdump.com/114.114.114.114
 server=/debugo.com/114.114.114.114
 server=/debuycn.com/114.114.114.114
+server=/decansmd.com/114.114.114.114
 server=/decard.com/114.114.114.114
 server=/decent-china.com/114.114.114.114
 server=/decentcapital.com/114.114.114.114
