accelerated-domains: add gosonly.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35418,6 +35418,7 @@ server=/gorse.com/114.114.114.114
 server=/gosailgis.com/114.114.114.114
 server=/goshijia.com/114.114.114.114
 server=/gosinoic.com/114.114.114.114
+server=/gosonly.com/114.114.114.114
 server=/gospelwin.com/114.114.114.114
 server=/gost-pct.com/114.114.114.114
 server=/gosun.ltd/114.114.114.114
