--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92721,6 +92721,7 @@ server=/xinliceping.com/114.114.114.114
 server=/xinlifudao.com/114.114.114.114
 server=/xinlinghuayuan.com/114.114.114.114
 server=/xinlingletu.com/114.114.114.114
+server=/xinlip.com/114.114.114.114
 server=/xinliwanju.com/114.114.114.114
 server=/xinlong-holding.com/114.114.114.114
 server=/xinluex.com/114.114.114.114
