--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100902,6 +100902,7 @@ server=/zhe.com/114.114.114.114
 server=/zhe800.com/114.114.114.114
 server=/zhe97.com/114.114.114.114
 server=/zhebei.com/114.114.114.114
+server=/zhebeipharm.com/114.114.114.114
 server=/zhebumai.com/114.114.114.114
 server=/zhefengle.com/114.114.114.114
 server=/zhehengsteel.com/114.114.114.114
