accelerated-domains: add zjjtgc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102453,6 +102453,7 @@ server=/zjjrh.com/114.114.114.114
 server=/zjjrtv.com/114.114.114.114
 server=/zjjsbank.com/114.114.114.114
 server=/zjjsit.com/114.114.114.114
+server=/zjjtgc.com/114.114.114.114
 server=/zjjubao.com/114.114.114.114
 server=/zjjxjt.com/114.114.114.114
 server=/zjjy.com/114.114.114.114
