--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102533,6 +102533,7 @@ server=/zjrc.net/114.114.114.114
 server=/zjrcu.com/114.114.114.114
 server=/zjriji.com/114.114.114.114
 server=/zjrob.com/114.114.114.114
+server=/zjrongli.com/114.114.114.114
 server=/zjrq.com/114.114.114.114
 server=/zjrtv.vip/114.114.114.114
 server=/zjrugao.com/114.114.114.114
