accelerated-domains: add zjsjcjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102554,6 +102554,7 @@ server=/zjshjkj.com/114.114.114.114
 server=/zjshuhao.com/114.114.114.114
 server=/zjshuo.com/114.114.114.114
 server=/zjsight.com/114.114.114.114
+server=/zjsjcjt.com/114.114.114.114
 server=/zjsjty.com/114.114.114.114
 server=/zjsjtz.com/114.114.114.114
 server=/zjskgr.com/114.114.114.114
