--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103239,6 +103239,7 @@ server=/zshuoshao.tech/114.114.114.114
 server=/zshypr.com/114.114.114.114
 server=/zsia.org/114.114.114.114
 server=/zsihuo.com/114.114.114.114
+server=/zsimc.com/114.114.114.114
 server=/zsincer.com/114.114.114.114
 server=/zsite.com/114.114.114.114
 server=/zsj18.com/114.114.114.114
