accelerated-domains: add zjmetal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102493,6 +102493,7 @@ server=/zjmaiou.com/114.114.114.114
 server=/zjmax.com/114.114.114.114
 server=/zjmc.tv/114.114.114.114
 server=/zjmct.com/114.114.114.114
+server=/zjmetal.com/114.114.114.114
 server=/zjmi-mall.com/114.114.114.114
 server=/zjminghong.com/114.114.114.114
 server=/zjmingzhen.com/114.114.114.114
