--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22633,6 +22633,7 @@ server=/cnzlapp.com/114.114.114.114
 server=/cnzps.com/114.114.114.114
 server=/cnzskj.com/114.114.114.114
 server=/cnzsqh.com/114.114.114.114
+server=/cnzsrf.com/114.114.114.114
 server=/cnzsyz.com/114.114.114.114
 server=/cnzweal.com/114.114.114.114
 server=/cnzxsoft.com/114.114.114.114
