--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23353,6 +23353,7 @@ server=/cqmiaoa.com/114.114.114.114
 server=/cqminghua.com/114.114.114.114
 server=/cqmmgo.com/114.114.114.114
 server=/cqmsdq.com/114.114.114.114
+server=/cqmtek.com/114.114.114.114
 server=/cqmw.com/114.114.114.114
 server=/cqmzj.com/114.114.114.114
 server=/cqnc.cc/114.114.114.114
