--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27672,6 +27672,7 @@ server=/dr-ku.com/114.114.114.114
 server=/dr009.com/114.114.114.114
 server=/draftstatic.com/114.114.114.114
 server=/drageasy.com/114.114.114.114
+server=/dragon-chem.com/114.114.114.114
 server=/dragon-guide.net/114.114.114.114
 server=/dragon-hotel.com/114.114.114.114
 server=/dragonballcn.com/114.114.114.114
