accelerated-domains: add highfundcorp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41848,6 +41848,7 @@ server=/high25-playback.com/114.114.114.114
 server=/highdigitizing.com/114.114.114.114
 server=/highenergyaerospace.com/114.114.114.114
 server=/highfel.com/114.114.114.114
+server=/highfundcorp.com/114.114.114.114
 server=/highgo.com/114.114.114.114
 server=/highleveltrans.com/114.114.114.114
 server=/highlightoptics.com/114.114.114.114
