--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61389,6 +61389,7 @@ server=/mizuda.com/114.114.114.114
 server=/mj110.net/114.114.114.114
 server=/mj85.com/114.114.114.114
 server=/mjasoft.com/114.114.114.114
+server=/mjatm.com/114.114.114.114
 server=/mjceo.com/114.114.114.114
 server=/mjecu.com/114.114.114.114
 server=/mjgxsc.com/114.114.114.114
