accelerated-domains: add xinxinmed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92865,6 +92865,7 @@ server=/xinxingsudi.com/114.114.114.114
 server=/xinxinhot.net/114.114.114.114
 server=/xinxinhotel.com/114.114.114.114
 server=/xinxinjoy.com/114.114.114.114
+server=/xinxinmed.com/114.114.114.114
 server=/xinxisea.com/114.114.114.114
 server=/xinxjs.com/114.114.114.114
 server=/xinxue-edu.com/114.114.114.114
