--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95081,6 +95081,7 @@ server=/xzzp.net/114.114.114.114
 server=/xzzulin.com/114.114.114.114
 server=/y-feng.com/114.114.114.114
 server=/y-i-y.com/114.114.114.114
+server=/y-lotus.com/114.114.114.114
 server=/y-os.net/114.114.114.114
 server=/y.cool/114.114.114.114
 server=/y.to/114.114.114.114
