--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22057,6 +22057,7 @@ server=/cndns.com/114.114.114.114
 server=/cndns5.com/114.114.114.114
 server=/cndog.net/114.114.114.114
 server=/cndongxiao.com/114.114.114.114
+server=/cndongya.com/114.114.114.114
 server=/cndoornet.com/114.114.114.114
 server=/cndoors.com/114.114.114.114
 server=/cndrealty.com/114.114.114.114
