accelerated-domains: add cnfpc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22123,6 +22123,7 @@ server=/cnfood.com/114.114.114.114
 server=/cnforever.com/114.114.114.114
 server=/cnforex.com/114.114.114.114
 server=/cnfosale.com/114.114.114.114
+server=/cnfpc.com/114.114.114.114
 server=/cnfpzz.com/114.114.114.114
 server=/cnfq.com/114.114.114.114
 server=/cnfrag.com/114.114.114.114
