accelerated-domains: add jiuzhoupharma.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50457,6 +50457,7 @@ server=/jiuzheng.com/114.114.114.114
 server=/jiuzhenge.com/114.114.114.114
 server=/jiuzhilan.com/114.114.114.114
 server=/jiuzhinews.com/114.114.114.114
+server=/jiuzhoupharma.com/114.114.114.114
 server=/jiuzhouzb.com/114.114.114.114
 server=/jiuzhuanzhuan.com/114.114.114.114
 server=/jiuzungame.com/114.114.114.114
