--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62431,6 +62431,7 @@ server=/musiness.vip/114.114.114.114
 server=/muskmfycdn.com/114.114.114.114
 server=/muslimwww.com/114.114.114.114
 server=/mussgirl.store/114.114.114.114
+server=/mustangbattery.com/114.114.114.114
 server=/mustelanivalis.com/114.114.114.114
 server=/mustups.net/114.114.114.114
 server=/musyder.com/114.114.114.114
