--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102503,6 +102503,7 @@ server=/zjlvjie.com/114.114.114.114
 server=/zjlxtx.com/114.114.114.114
 server=/zjlzgg.com/114.114.114.114
 server=/zjmaiou.com/114.114.114.114
+server=/zjmana.com/114.114.114.114
 server=/zjmax.com/114.114.114.114
 server=/zjmc.tv/114.114.114.114
 server=/zjmct.com/114.114.114.114
