accelerated-domains: add chinataitan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20357,6 +20357,7 @@ server=/chinasws.com/114.114.114.114
 server=/chinasydw.org/114.114.114.114
 server=/chinatai.com/114.114.114.114
 server=/chinatairun.com/114.114.114.114
+server=/chinataitan.com/114.114.114.114
 server=/chinataiwan.org/114.114.114.114
 server=/chinatalent.org/114.114.114.114
 server=/chinatalentgroup.com/114.114.114.114
