--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49857,6 +49857,7 @@ server=/jindongneng.com/114.114.114.114
 server=/jindongsoft.com/114.114.114.114
 server=/jindun007.net/114.114.114.114
 server=/jindunfan.com/114.114.114.114
+server=/jindunkeji.com/114.114.114.114
 server=/jinduoduo.net/114.114.114.114
 server=/jinenrunze.com/114.114.114.114
 server=/jinergy.com/114.114.114.114
