--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51481,6 +51481,7 @@ server=/jsjdrcb.com/114.114.114.114
 server=/jsjdzf.com/114.114.114.114
 server=/jsjffj.com/114.114.114.114
 server=/jsjiami.com/114.114.114.114
+server=/jsjianli.com/114.114.114.114
 server=/jsjinfu.com/114.114.114.114
 server=/jsjj120.com/114.114.114.114
 server=/jsjjy.com/114.114.114.114
