accelerated-domains: add xinnakj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92753,6 +92753,7 @@ server=/xinmeti.com/114.114.114.114
 server=/xinmima.com/114.114.114.114
 server=/xinminghui.com/114.114.114.114
 server=/xinmintian.vip/114.114.114.114
+server=/xinnakj.com/114.114.114.114
 server=/xinnet.com/114.114.114.114
 server=/xinnetvip.com/114.114.114.114
 server=/xinniangjie.com/114.114.114.114
