accelerated-domains: add zj-tiansong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102317,6 +102317,7 @@ server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
 server=/zj-jingyang.com/114.114.114.114
 server=/zj-nuolong.com/114.114.114.114
+server=/zj-tiansong.com/114.114.114.114
 server=/zj-tuna.com/114.114.114.114
 server=/zj-yinlong.com/114.114.114.114
 server=/zj.com/114.114.114.114
