accelerated-domains: add zjkdqz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102482,6 +102482,7 @@ server=/zjkangzh.com/114.114.114.114
 server=/zjkccb.com/114.114.114.114
 server=/zjkcysm.com/114.114.114.114
 server=/zjkdl.com/114.114.114.114
+server=/zjkdqz.com/114.114.114.114
 server=/zjke.com/114.114.114.114
 server=/zjkelan.com/114.114.114.114
 server=/zjkgdcs.com/114.114.114.114
