accelerated-domains: add zjsftc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102569,6 +102569,7 @@ server=/zjsdbjt.com/114.114.114.114
 server=/zjsdjlkj.com/114.114.114.114
 server=/zjseaport.com/114.114.114.114
 server=/zjsfkj.com/114.114.114.114
+server=/zjsftc.com/114.114.114.114
 server=/zjsgjs.com/114.114.114.114
 server=/zjshcl.com/114.114.114.114
 server=/zjshjkj.com/114.114.114.114
