accelerated-domains: add realliniot.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71946,6 +71946,7 @@ server=/realforcechina.com/114.114.114.114
 server=/realibox.com/114.114.114.114
 server=/realks.com/114.114.114.114
 server=/reallct.com/114.114.114.114
+server=/realliniot.com/114.114.114.114
 server=/reallylife.com/114.114.114.114
 server=/realmebbs.com/114.114.114.114
 server=/realmedy.com/114.114.114.114
