accelerated-domains: add harog.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40321,6 +40321,7 @@ server=/harmony4s.com/114.114.114.114
 server=/harmonyos.com/114.114.114.114
 server=/harmonywatch.com/114.114.114.114
 server=/harmyy.com/114.114.114.114
+server=/harog.net/114.114.114.114
 server=/harpost.com/114.114.114.114
 server=/harpping.com/114.114.114.114
 server=/harryhorsemedia.com/114.114.114.114
