accelerated-domains: add hirige.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41968,6 +41968,7 @@ server=/hirede.com/114.114.114.114
 server=/hiregex.com/114.114.114.114
 server=/hiregistry.com/114.114.114.114
 server=/hireye.com/114.114.114.114
+server=/hirige.com/114.114.114.114
 server=/hirisemed.com/114.114.114.114
 server=/hirisun.com/114.114.114.114
 server=/hiroop.com/114.114.114.114
