accelerated-domains: add pan-good.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66978,6 +66978,7 @@ server=/palomachina.com/114.114.114.114
 server=/pamahotel.com/114.114.114.114
 server=/pamica.com/114.114.114.114
 server=/pamss.net/114.114.114.114
+server=/pan-good.com/114.114.114.114
 server=/pan-gulf.com/114.114.114.114
 server=/pan131.com/114.114.114.114
 server=/pan58.com/114.114.114.114
