--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79448,6 +79448,7 @@ server=/sunlogin.net/114.114.114.114
 server=/sunlons.com/114.114.114.114
 server=/sunlordinc.com/114.114.114.114
 server=/sunlune.com/114.114.114.114
+server=/sunmarr.com/114.114.114.114
 server=/sunmi.com/114.114.114.114
 server=/sunmingxia.com/114.114.114.114
 server=/sunmmm.com/114.114.114.114
