accelerated-domains: add zibasset.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102095,6 +102095,7 @@ server=/zi15.com/114.114.114.114
 server=/zi5.cc/114.114.114.114
 server=/zi5.me/114.114.114.114
 server=/zibaomuye.com/114.114.114.114
+server=/zibasset.com/114.114.114.114
 server=/zibll.com/114.114.114.114
 server=/ziboborui.com/114.114.114.114
 server=/ziboga.com/114.114.114.114
