accelerated-domains: add zjheliang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102425,6 +102425,7 @@ server=/zjhby.com/114.114.114.114
 server=/zjhcbank.com/114.114.114.114
 server=/zjhdcs.com/114.114.114.114
 server=/zjhejiang.com/114.114.114.114
+server=/zjheliang.com/114.114.114.114
 server=/zjhfxcl.com/114.114.114.114
 server=/zjhi.net/114.114.114.114
 server=/zjhkele.com/114.114.114.114
