--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102505,6 +102505,7 @@ server=/zjkwhjj.com/114.114.114.114
 server=/zjlcwg.com/114.114.114.114
 server=/zjldrcb.com/114.114.114.114
 server=/zjledfbd.com/114.114.114.114
+server=/zjlepu.com/114.114.114.114
 server=/zjleyi.com/114.114.114.114
 server=/zjlianchi.com/114.114.114.114
 server=/zjlianyingkj.com/114.114.114.114
