accelerated-domains: add kgipr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53470,6 +53470,7 @@ server=/kg-gold.com/114.114.114.114
 server=/kg.com/114.114.114.114
 server=/kghbcn.com/114.114.114.114
 server=/kgimg.com/114.114.114.114
+server=/kgipr.com/114.114.114.114
 server=/kgogame.com/114.114.114.114
 server=/kgou.cc/114.114.114.114
 server=/kh-zx.com/114.114.114.114
