accelerated-domains: add boadge.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15920,6 +15920,7 @@ server=/bnzone.com/114.114.114.114
 server=/bnzt88.com/114.114.114.114
 server=/bo-blog.com/114.114.114.114
 server=/bo56.com/114.114.114.114
+server=/boadge.com/114.114.114.114
 server=/boai.com/114.114.114.114
 server=/boaigx.com/114.114.114.114
 server=/boaihospital.com/114.114.114.114
