accelerated-domains: add byzjbyq.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17085,6 +17085,7 @@ server=/byyc.net/114.114.114.114
 server=/byydkj.net/114.114.114.114
 server=/byytfy.com/114.114.114.114
 server=/byzhihuo.com/114.114.114.114
+server=/byzjbyq.com/114.114.114.114
 server=/byzkj.com/114.114.114.114
 server=/byzoro.com/114.114.114.114
 server=/byzp.com/114.114.114.114
