--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19300,6 +19300,7 @@ server=/cheersee.com/114.114.114.114
 server=/cheersofa.com/114.114.114.114
 server=/cheerspublishing.com/114.114.114.114
 server=/cheersson.com/114.114.114.114
+server=/cheertech.ltd/114.114.114.114
 server=/cheetahfun.com/114.114.114.114
 server=/cheetahgames.com/114.114.114.114
 server=/cheetahgo.net/114.114.114.114
