accelerated-domains: add cnzjdd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22634,6 +22634,7 @@ server=/cnzhhy.com/114.114.114.114
 server=/cnzhiyuanhui.com/114.114.114.114
 server=/cnzhjk.com/114.114.114.114
 server=/cnziyun.com/114.114.114.114
+server=/cnzjdd.com/114.114.114.114
 server=/cnzjj.com/114.114.114.114
 server=/cnzjol.com/114.114.114.114
 server=/cnzlapp.com/114.114.114.114
