--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29744,6 +29744,7 @@ server=/ennresearch.com/114.114.114.114
 server=/enoya.com/114.114.114.114
 server=/enpapers.com/114.114.114.114
 server=/enpht.com/114.114.114.114
+server=/enpowermicro.com/114.114.114.114
 server=/enproscm.com/114.114.114.114
 server=/enqoo.com/114.114.114.114
 server=/enread.com/114.114.114.114
