accelerated-domains: add huacai-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43689,6 +43689,7 @@ server=/huabocam.com/114.114.114.114
 server=/huabokeji.com/114.114.114.114
 server=/huabot.com/114.114.114.114
 server=/huabuqi.com/114.114.114.114
+server=/huacai-tech.com/114.114.114.114
 server=/huacaijia.com/114.114.114.114
 server=/huacaobk.com/114.114.114.114
 server=/huacaole.com/114.114.114.114
