--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52735,6 +52735,7 @@ server=/kaijiage.com/114.114.114.114
 server=/kaijieunion.com/114.114.114.114
 server=/kaikeba.com/114.114.114.114
 server=/kailang17.com/114.114.114.114
+server=/kailinchem.com/114.114.114.114
 server=/kailing.pub/114.114.114.114
 server=/kailitech.com/114.114.114.114
 server=/kaimanhua.com/114.114.114.114
