--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56601,6 +56601,7 @@ server=/lihang-expo.com/114.114.114.114
 server=/lihangzx.com/114.114.114.114
 server=/lihaoshuyuan.com/114.114.114.114
 server=/liheng1688.com/114.114.114.114
+server=/lihengjh.com/114.114.114.114
 server=/lihetong.com/114.114.114.114
 server=/lihongcctv.com/114.114.114.114
 server=/lihtao.com/114.114.114.114
