accelerated-domains: add polyflowenergy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68310,6 +68310,7 @@ server=/poly-pm.com/114.114.114.114
 server=/polycent.com/114.114.114.114
 server=/polycn.com/114.114.114.114
 server=/polycom-jl.com/114.114.114.114
+server=/polyflowenergy.com/114.114.114.114
 server=/polyhotel.com/114.114.114.114
 server=/polyinno.com/114.114.114.114
 server=/polyreymed.com/114.114.114.114
