--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73095,6 +73095,7 @@ server=/runsunedu.net/114.114.114.114
 server=/runtimeedu.com/114.114.114.114
 server=/runtimewh.com/114.114.114.114
 server=/runtronic.com/114.114.114.114
+server=/runtuchem.com/114.114.114.114
 server=/runwanxin.com/114.114.114.114
 server=/runwise.co/114.114.114.114
 server=/runwith.cc/114.114.114.114
