--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75624,6 +75624,7 @@ server=/shengwu.store/114.114.114.114
 server=/shengwu01.com/114.114.114.114
 server=/shengxiao.net/114.114.114.114
 server=/shengxiaobj.com/114.114.114.114
+server=/shengxiaochemical.com/114.114.114.114
 server=/shengxin.ren/114.114.114.114
 server=/shengxinquan.net/114.114.114.114
 server=/shengxuxu.com/114.114.114.114
