accelerated-domains: add zjhdchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102435,6 +102435,7 @@ server=/zjhangyin.com/114.114.114.114
 server=/zjhbdlkj.com/114.114.114.114
 server=/zjhby.com/114.114.114.114
 server=/zjhcbank.com/114.114.114.114
+server=/zjhdchem.com/114.114.114.114
 server=/zjhdcs.com/114.114.114.114
 server=/zjhejiang.com/114.114.114.114
 server=/zjheliang.com/114.114.114.114
