--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103705,6 +103705,7 @@ server=/zxb12315.com/114.114.114.114
 server=/zxblinux.com/114.114.114.114
 server=/zxbook.net/114.114.114.114
 server=/zxbzr.com/114.114.114.114
+server=/zxchemgroup.com/114.114.114.114
 server=/zxcmk.com/114.114.114.114
 server=/zxcoder.com/114.114.114.114
 server=/zxcvqqw.com/114.114.114.114
