accelerated-domains: add zjzhonglan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102689,6 +102689,7 @@ server=/zjzg.com/114.114.114.114
 server=/zjzhengding.com/114.114.114.114
 server=/zjzhengxingyiyuan.com/114.114.114.114
 server=/zjzhitan.com/114.114.114.114
+server=/zjzhonglan.com/114.114.114.114
 server=/zjzhongtian.com/114.114.114.114
 server=/zjzj.org/114.114.114.114
 server=/zjzjhotel.com/114.114.114.114
