--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11280,6 +11280,7 @@ server=/ansgo.com/114.114.114.114
 server=/anshahouse.com/114.114.114.114
 server=/anshibuff.com/114.114.114.114
 server=/anshiduo.com/114.114.114.114
+server=/anshunfiber.com/114.114.114.114
 server=/anshunholdinggroup.com/114.114.114.114
 server=/anshuntech.ltd/114.114.114.114
 server=/ansiding.com/114.114.114.114
