accelerated-domains: add chinapanocean.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20255,6 +20255,7 @@ server=/chinaopticsvalley.com/114.114.114.114
 server=/chinaore.com/114.114.114.114
 server=/chinaorganicchem.com/114.114.114.114
 server=/chinaott.net/114.114.114.114
+server=/chinapanocean.com/114.114.114.114
 server=/chinapantom.com/114.114.114.114
 server=/chinapaper.net/114.114.114.114
 server=/chinapastel.com/114.114.114.114
