--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43872,6 +43872,7 @@ server=/huangkong.net/114.114.114.114
 server=/huanglei.me/114.114.114.114
 server=/huangli.com/114.114.114.114
 server=/huangliangbo.com/114.114.114.114
+server=/huangma.com/114.114.114.114
 server=/huangniu.in/114.114.114.114
 server=/huangpucn.com/114.114.114.114
 server=/huangqi1688.com/114.114.114.114
