accelerated-domains: add jmkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50857,6 +50857,7 @@ server=/jmjc.tech/114.114.114.114
 server=/jmjssw.com/114.114.114.114
 server=/jmjxc.com/114.114.114.114
 server=/jmjzy.com/114.114.114.114
+server=/jmkj.com/114.114.114.114
 server=/jmkjmob5.xyz/114.114.114.114
 server=/jmkx.com/114.114.114.114
 server=/jmlanguan.com/114.114.114.114
