--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60729,6 +60729,7 @@ server=/mhhf.com/114.114.114.114
 server=/mhhf.net/114.114.114.114
 server=/mhi-ac.com/114.114.114.114
 server=/mhimg.com/114.114.114.114
+server=/mhinele.com/114.114.114.114
 server=/mhito.net/114.114.114.114
 server=/mhnzww.com/114.114.114.114
 server=/mhpdf.com/114.114.114.114
