accelerated-domains: add zjsxkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102615,6 +102615,7 @@ server=/zjstv.com/114.114.114.114
 server=/zjsuntek.com/114.114.114.114
 server=/zjsw.org/114.114.114.114
 server=/zjswxpx.com/114.114.114.114
+server=/zjsxkj.com/114.114.114.114
 server=/zjsxlt.com/114.114.114.114
 server=/zjsxrz.com/114.114.114.114
 server=/zjsxss.com/114.114.114.114
