--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52707,6 +52707,7 @@ server=/kaichejiqiao.com/114.114.114.114
 server=/kaichengschool.com/114.114.114.114
 server=/kaidanbao.com/114.114.114.114
 server=/kaidany.com/114.114.114.114
+server=/kaidechem.com/114.114.114.114
 server=/kaidianbang.com/114.114.114.114
 server=/kaidicloud.com/114.114.114.114
 server=/kaierda.com/114.114.114.114
