--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29716,6 +29716,7 @@ server=/enicn.com/114.114.114.114
 server=/enjoy.link/114.114.114.114
 server=/enjoy1992.com/114.114.114.114
 server=/enjoy3c.com/114.114.114.114
+server=/enjoycare.com/114.114.114.114
 server=/enjoydiy.com/114.114.114.114
 server=/enjoyfe.com/114.114.114.114
 server=/enjoyglobal.net/114.114.114.114
