--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75593,6 +75593,7 @@ server=/shenghefilms.com/114.114.114.114
 server=/shengheplastic.com/114.114.114.114
 server=/shenghua-fire.com/114.114.114.114
 server=/shenghuabao.net/114.114.114.114
+server=/shenghuagroup.com/114.114.114.114
 server=/shenghui56.com/114.114.114.114
 server=/shenghuo365.com/114.114.114.114
 server=/shenghuojia.com/114.114.114.114
