accelerated-domains: add ziliref.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102198,6 +102198,7 @@ server=/ziliao8.cc/114.114.114.114
 server=/ziliao8.com/114.114.114.114
 server=/ziliaoge.com/114.114.114.114
 server=/ziliaoh.com/114.114.114.114
+server=/ziliref.com/114.114.114.114
 server=/zilongame.com/114.114.114.114
 server=/zilongshanren.com/114.114.114.114
 server=/zilrms.com/114.114.114.114
